<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_activity_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_name_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_activity_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_location_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_activity_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_startdate_hint"
            android:inputType="datetime" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_activity_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_end"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_enddate_hint"
            android:inputType="datetime" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_activity_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_description_hint"
            android:inputType="textImeMultiLine" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_activity_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_url_hint"
            android:inputType="textUri" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textinput_activity_template"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/activity_template"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/activity_template_hint"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

</LinearLayout>